--- a/project.config.json
+++ b/project.config.json
@@ -34,7 +34,7 @@
     "packNpmRelationList": [],
     "minifyWXSS": true
   },
-  "appid": "wx3b52857f5e1e2da5",
+  "appid": "wx5d2649b27001f4d1",
   "projectname": "paopao",
   "libVersion": "2.8.1",
   "simulatorType": "wechat",
