--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
   "miniprogramRoot": "miniApp/",
   "cloudfunctionRoot": "server/",
   "setting": {
-    "urlCheck": true,
+    "urlCheck": false,
     "es6": true,
     "enhance": true,
     "postcss": true,
@@ -34,7 +34,7 @@
     "packNpmRelationList": [],
     "minifyWXSS": true
   },
-  "appid": "wx5d2649b27001f4d1",
+  "appid": "wx3b52857f5e1e2da5",
   "projectname": "paopao",
   "libVersion": "2.8.1",
   "simulatorType": "wechat",
